# wekiwi

./: LICENSE.md  README.md  package-lock.json
wekiwi-ai-search-and-feature-extraction/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.wekiwi-services  README.md  architecture.md  environment.yml  example.docker-compose.override.yml  example.docker-compose.yml  example.environment.yaml  example.milvus.yaml  pyproject.toml
wekiwi-ai-search-and-feature-extraction/app/: config.py  main.py
wekiwi-ai-search-and-feature-extraction/app/api/: authentication.py  service_auth.py
wekiwi-ai-search-and-feature-extraction/app/api/v1/content/: content.py  search.py  (+2 more)
wekiwi-ai-search-and-feature-extraction/app/internal/: errors.py  models.py  processor.py  types.py
wekiwi-ai-search-and-feature-extraction/app/internal/directus/: __init__.py  directus.py
wekiwi-ai-search-and-feature-extraction/app/internal/milvusdb/: __init__.py  handle_db_items.py  milvusdb.py
wekiwi-ai-search-and-feature-extraction/app/internal/postgresdb/: __init__.py  postgresdb.py
wekiwi-ai-search-and-feature-extraction/app/internal/utils/: generate_title.py  pdf_parser.py  sanitize_text.py  search_postprocessing.py  text_splitter.py  throttle.py
wekiwi-ai-search-and-feature-extraction/scripts/: deps  tests
wekiwi-ai-search-and-feature-extraction/sql/: 00-drop-tables.sql  01-create-tables.sql
wekiwi-ai-search-and-feature-extraction/tests/: conftest.py  milvus_db_integration.ipynb  milvus_db_migration.ipynb  milvus_search_test.ipynb  synthetic_data.ipynb  test.ipynb  test_api.py
(+205 files in other folders)
